<resources>
    <string name="app_name">Laboratorio04-LifeCicle</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="TextView_text">Rellene la siguiente informacion</string>
    <string name="confirma_tu_informaci_n">Confirma tu Información</string>
    <string name="nameSecond">Name:</string>
    <string name="compartir">COMPARTIR</string>
    <string name="phone_number">Phone Number:</string>
    <string name="Second">Email:</string>
    <string name="share_info">Share Info</string>
    <string name="button">Button</string>
</resources>